# FundamentaOfComputerGraphics

./: .gitignore  CMakeLists.txt  CreateProject.bat  DeleteCMake.bat  README.md
FundamentaOfComputerGraphics/: FundamentaOfComputerGraphics.cpp  glad.c
